--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Layout Creative Bakery",
   "scripts": {
     "init": "mate-scripts init",
-    "start": "mate-scripts start",
+    "start": "npx parcel src/index.html",
     "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
     "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
     "lint": "npm run style-format && npm run format && mate-scripts lint",
@@ -12,22 +12,25 @@
     "build": "mate-scripts build",
     "deploy": "mate-scripts deploy",
     "update": "mate-scripts update",
-    "postinstall": "npm run update",
+    "postinstall": "npx mate-scripts update",
     "test": "npm run lint && npm run test:only"
   },
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "dependencies": {},
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.6",
     "@mate-academy/bemlint": "latest",
     "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.8.6",
+    "@mate-academy/scripts": "^2.1.1",
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "^2.12.0",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.7",
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.3.2",
     "stylelint": "^16.7.0",
     "stylelint-scss": "^6.4.1"
@@ -41,5 +44,8 @@
     "tests": {
       "backstop": false
     }
+  },
+  "dependencies": {
+    "parcel": "^2.14.4"
   }
 }
