--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "creative-bakery",
   "version": "1.0.0",
-  "description": "Layout Creative Bakery",
-  "scripts": {
+"scripts": {
     "start": "npm run dev",
-    "dev": "parcel index.html --open --dist-dir dist",
-    "build": "parcel build index.html --dist-dir dist",
-    "format": "prettier --ignore-path .prettierignore --write './**/*.{html,css,scss}'",
-    "style-format": "npx stylelint 'styles/**/*.scss' --fix --allow-empty-input",
+    "dev": "parcel src/index.html --open --dist-dir dist",
+    "build": "parcel build src/index.html --dist-dir dist --public-url ./",
     "lint": "npm run style-format && npm run format",
-      "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "rimraf dist && npm run build && gh-pages -d dist"
   },
-  "keywords": [],
-  "author": "Mate Academy",
-  "license": "GPL-3.0",
+  "parcel": {
+    "build": {
+      "publicUrl": "./"
+    }
+  },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.16.0",
     "gh-pages": "^6.3.0",
     "parcel": "^2.12.0",
-    "prettier": "^3.3.2",
-    "stylelint": "^16.7.0",
-    "stylelint-scss": "^6.4.1"
+    "rimraf": "^5.0.10"
   }
 }
