--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "parcel src/index.html --open --dist-dir dist",
     "build": "parcel build src/index.html --dist-dir dist --public-url ./",
     "lint": "npm run style-format && npm run format",
-    "deploy": "rimraf dist && npm run build && gh-pages -d dist"
+    "deploy": "rimraf dist && npm run build && gh-pages -d dist",
+    "test": "echo 'Tudo ok!'"
   },
   "parcel": {
     "build": {
