--- a/package.json
+++ b/package.json
@@ -1,23 +1,59 @@
 {
   "name": "creative-bakery",
   "version": "1.0.0",
-"scripts": {
-    "start": "npm run dev",
-    "dev": "parcel src/index.html --open --dist-dir dist",
-    "build": "parcel build src/index.html --dist-dir dist --public-url ./",
-    "lint": "npm run style-format && npm run format",
-    "deploy": "rimraf dist && npm run build && gh-pages -d dist",
-    "test": "echo 'Tudo ok!'"
+  "description": "Layout Creative Bakery",
+  "scripts": {
+    "init": "mate-scripts init",
+    "start": "mate-scripts start -l",
+    "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
+    "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
+    "lint": "npm run style-format && npm run format && mate-scripts lint",
+    "test:only": "mate-scripts test",
+    "build": "mate-scripts build",
+    "deploy": "mate-scripts deploy",
+    "update": "mate-scripts update",
+    "postinstall": "npm run update",
+    "test": "npm run lint && npm run test:only"
   },
-  "parcel": {
-    "build": {
-      "publicUrl": "./"
-    }
-  },
+  "keywords": [],
+  "author": "Mate Academy",
+  "license": "GPL-3.0",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.16.0",
-    "gh-pages": "^6.3.0",
-    "parcel": "^2.12.0",
-    "rimraf": "^5.0.10"
+    "@linthtml/linthtml": "^0.9.6",
+    "@mate-academy/eslint-config": "latest",
+    "@mate-academy/jest-mochawesome-reporter": "^1.0.0",
+    "@mate-academy/linthtml-config": "latest",
+    "@mate-academy/scripts": "^2.1.2",
+    "@mate-academy/stylelint-config": "latest",
+    "cypress": "^13.13.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^3.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
+    "prettier": "^3.3.2",
+    "sass": "^1.93.2",
+    "stylelint": "^16.7.0",
+    "stylelint-scss": "^6.4.1",
+    "vite": "^6.3.6"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ],
+  "mateAcademy": {
+    "projectType": "layoutVite",
+    "linters": {
+      "javascript": false,
+      "bem": false
+    },
+    "tests": {
+      "jest": false,
+      "backstop": false,
+      "cypress": true
+    }
   }
 }
+
