--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Layout Creative Bakery",
   "scripts": {
     "init": "mate-scripts init",
-    "start": "mate-scripts start -l",
+    "start": "mate-scripts start",
     "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
     "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
     "lint": "npm run style-format && npm run format && mate-scripts lint",
@@ -13,6 +13,7 @@
     "deploy": "mate-scripts deploy",
     "update": "mate-scripts update",
     "postinstall": "npm run update",
+      "sass:watch": "sass --watch src/styles/main.scss:src/styles/main.css",
     "test": "npm run lint && npm run test:only"
   },
   "keywords": [],
@@ -20,40 +21,26 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.6",
-    "@mate-academy/eslint-config": "latest",
-    "@mate-academy/jest-mochawesome-reporter": "^1.0.0",
+    "@mate-academy/bemlint": "latest",
     "@mate-academy/linthtml-config": "latest",
     "@mate-academy/scripts": "^2.1.2",
     "@mate-academy/stylelint-config": "latest",
-    "cypress": "^13.13.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-cypress": "^3.3.0",
-    "eslint-plugin-node": "^11.1.0",
+    "@parcel/transformer-sass": "^2.12.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0",
     "prettier": "^3.3.2",
-    "sass": "^1.93.2",
+    "sass": "^1.93.3",
     "stylelint": "^16.7.0",
-    "stylelint-scss": "^6.4.1",
-    "vite": "^6.3.6"
+    "stylelint-scss": "^6.4.1"
   },
-  "browserslist": [
-    "last 2 versions"
-  ],
   "mateAcademy": {
-    "projectType": "layoutVite",
+    "projectType": "layout",
     "linters": {
       "javascript": false,
       "bem": false
     },
     "tests": {
-      "jest": false,
-      "backstop": false,
-      "cypress": true
+      "backstop": false
     }
   }
 }
-
