--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
     "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
     "lint": "npm run style-format && npm run format && mate-scripts lint",
-    "test:only": "mate-scripts test",
-    "build": "mate-scripts build",
     "deploy": "mate-scripts deploy",
     "update": "mate-scripts update",
     "postinstall": "npm run update",
-      "sass:watch": "sass --watch src/styles/main.scss:src/styles/main.css",
-    "test": "npm run lint && npm run test:only"
+    "sass:watch": "sass --watch src/styles/main.scss:src/styles/main.css",
+    "test": "npm run lint && npm run test:only",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "Mate Academy",
@@ -31,7 +32,8 @@
     "prettier": "^3.3.2",
     "sass": "^1.93.3",
     "stylelint": "^16.7.0",
-    "stylelint-scss": "^6.4.1"
+    "stylelint-scss": "^6.4.1",
+    "vite": "^7.1.12"
   },
   "mateAcademy": {
     "projectType": "layout",
