--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "update": "mate-scripts update",
     "postinstall": "npm run update",
     "sass:watch": "sass --watch src/styles/main.scss:src/styles/main.css",
-    "test": "npm run lint && npm run test:only",
+    "test": "npm run lint",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
